# simple-remogui

./: CMakeLists.txt  MediaStreamProc.cpp  MediaStreamProc.h  MediaStreamWidget.cpp  MediaStreamWidget.h  README.md  commlog.cpp  commlog.h  mainwindow.cpp  mainwindow.h  simple-remogui.pro
custom-ffmpeg/libavformat/: config.h  libavformat.pc  rtsp.h
